--- a/web/package.json
+++ b/web/package.json
@@ -41,8 +41,8 @@
     "quill": "1.3.6",
     "rxjs": "^6.2.2",
     "wakanda-client": "^2.0.0",
-    "zone.js": "^0.8.26",
-    "font-awesome": "^4.7.0"
+    "zone.js": "^0.8.26"
+    
   },
   "devDependencies": {
     "@angular/cli": "6.1.2",
