--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxyConfig proxy.conf.json",
+    "start": "ng serve --proxyConfig proxy.conf.json --port 4300",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
